--- a/src/assets/i18n/hr.json
+++ b/src/assets/i18n/hr.json
@@ -3,18 +3,18 @@
     "ABOUT": "Više o",
     "HELP": "Pomoć",
 	"HELPTEXT" : "Dokumentacija i izvorni kod za novčanik može se naći ovdje:<br><br>https://github.com/xaya/xaya<br><br>Opća pomoć je dostupna kroz sajt zajednice na:<br><br>https://forum.xaya.io/<br><br>Pitanja koja se moraju postaviti u samouvjerenosti mogu se poslati na:<br><br>support@xaya.io<br><br>",
-	"ABOUTEXT" : "Autorsko pravo Bitcoin programeri, Namecoin programeri i Xaya programeri<br><br>Molimo Vas da pružite podršku ako Vam je Xaya bila korisna. Posjetite https://xaya.io za daljnje informacije o softveru.<br>Izvorni kod je dostupan od https://github.com/xaya/<br><br><br>Ovo je probni softver.<br>Distribuirano pod MIT softverskom licencom, pogledajte slijedeću datoteku COPYING<br>or https://opensource.org/licenses/MIT<br><br>Ovaj proizvod uključuje softver razvijen od OpenSSL projekta za upotrebu u <br>OpenSSL Toolkit https://www.openssl.org i kriptografskom softveru napisanom od<br>Eric Young i UPnP softvera napisanog od Thomas Bernard.<br><br>Bazirano na nodeJS, angular, electron i nadopunjujućim paketima napravljenim od drugačijih nodeJS suradnika.<br><br>Trenutna verzija novčanika: ",	
+	"ABOUTEXT" : "Autorsko pravo Bitcoin programeri, Namecoin programeri i Xaya programeri<br><br>Molimo Vas da pružite podršku ako Vam je Xaya bila korisna. Posjetite https://xaya.io za daljnje informacije o softveru.<br>Izvorni kod je dostupan od https://github.com/xaya/<br><br><br>Ovo je probni softver.<br>Distribuirano pod MIT softverskom licencom, pogledajte sljedeću datoteku COPYING<br>or https://opensource.org/licenses/MIT<br><br>Ovaj proizvod uključuje softver razvijen od OpenSSL projekta za upotrebu u <br>OpenSSL Toolkit https://www.openssl.org i kriptografskom softveru napisanom od<br>Eric Young i UPnP softvera napisanog od Thomas Bernard.<br><br>Bazirano na nodeJS, angular, electron i nadopunjujućim paketima napravljenim od drugačijih nodeJS suradnika.<br><br>Trenutna verzija novčanika: ",	
 	"MINIMIZE" : "Minimiziraj",
 	"OFAIL" : "Async operacija nije uspjela: "
   },
   "LEFTMENU": {
     "OVERVIEW": "Pregled",
-    "ADDRESSES": "Dobiti",
+    "ADDRESSES": "Primanje",
 	"TRANSACTIONS": "Transakcije",
 	"SETTINGS": "Postavke",
 	"NAMECOIN": "Stvori imena",
 	"NAMECOINLIST": "Moja imena",
-	"SEND": "Poslati",
+	"SEND": "Slanje",
 	"CONSOLE": "Konzola",
 	"EXIT": "Izlaz",
 	"CHAT": "XID"
@@ -23,17 +23,17 @@
     "OVERVIEW": "Pregled",
     "BALANCE": "Bilanca",
 	"BLOCK": "Blok",
-	"CONNECTIONS": "Veze",
+	"CONNECTIONS": "Konekcije",
 	"NETTYPE": "Tip mreže",
 	"WALLETVERSION": "Daemon Verzija",
 	"WALLETBUILDVERSION": "Verzija novčanika",
 	"BLOCKPROGRESSION": "Progresija bloka",
-	"PRUNED" : "Je obrezana?",
+	"PRUNED" : "Je smanjena?",
 	"DIFFICULTY" : "Težina",
-	"MEDIANTIME" : "Blok vrijeme",
+	"MEDIANTIME" : "Vrijeme bloka",
 	"SYNCHRONIZING" : "Sinkronizacija...",
 	"VAULTWALLET" : "Trezor novčanik",
-	"GAMEWALLET" : "Novčanik za igre",
+	"GAMEWALLET" : "Gaming novčanik",
 	"ENCRYPT" : "Šifriraj novčanik",
 	"ENTERPASSWORD" : "Upišite svoju lozinku",
 	"ENCRYPTBTN" :"Šifriraj",
@@ -55,37 +55,37 @@
 	"CTORPC" : "Povezivanje do RPC na priključak  ",
 	"CONNECTED" : "Povezano",
 	"PERROR": "Greška sa dopuštenjem",
-	"ENCRYPTWARN" : "Molimo Vas, šifrirajte svoj trezor novčanik"
+	"ENCRYPTWARN" : "Šifrirajte svoj trezor novčanik"
   },
    "SSETTINGS": {
     "CONNECTIONSETTINGS": "Postavke veza",
     "HOSTADDRESS": "Adresa domaćina",
 	"PORT": "Priključak",
 	"SUBMIT": "Potvrdi postavke",
-	"BACKUP": "REZERVA NOVČANIKA",
-	"USERNAME": "RPC Korisničko ime Nadjačaj",
-	"PASSWORD": "RPC Lozinka Nadjačaj",
-	"OVERRIDE": "DataDir Nadjačaj",
+	"BACKUP": "BACKUP NOVČANIKA",
+	"USERNAME": "RPC Prekoračenje korisničkog imena",
+	"PASSWORD": "RPC Prekoračenje lozinke",
+	"OVERRIDE": "Prekoračenje DataDir-a",
 	"SELECTPATH" : "Odaberite put",
-	"OVERRIDEDAEMON" : "Daemon Nadjačaj",
-	"SELECTPATHDAEMON" : "Odaberite put",
-	"CLEARPATH" : "Čist put",
+	"OVERRIDEDAEMON" : "Prekoračenje Daemon-a",
+	"SELECTPATHDAEMON" : "Odaberite Daemon put",
+	"CLEARPATH" : "Obriši put",
 	"DEFAULT" : "Zadano",
 	"ADVANCED" : "Napredno",
-	"WARN" : "Uvijek napravite rezervu vašeg novčanika. Čuvajte svoju rezervu, ključeve i lozinku na sigurnom mjestu.",
-	"WARN2" : "Rezerva u ovom novčaniku je trenutno onemogućena. Pretražite svoj datadir i manuelno kopirajte svoje trezor i igračke foldere na sigurno mjesto. Budite sigurni da novčanik nije pokrenut.",
-	"DAEMONDIST" : "Odaberite daemon odredište",
+	"WARN" : "Uvijek napravite backup vašeg novčanika. Čuvajte svoj backup, ključeve i lozinku na sigurnom mjestu.",
+	"WARN2" : "Backup u ovom novčaniku je trenutno onemogućen. Pretražite svoj datadir i kopirajte svoje trezor i gaming foldere na sigurno mjesto. Novčanik ne smije biti pokrenut.",
+	"DAEMONDIST" : "Odaberite Daemon odredište",
 	"SELPATH" : "Put je prazan.",
 	"SEDDDARIPT" : "Odaberite datadir odredište",
 	"SELBUDIST" : "Odaberite odredište",
 	"NOFILESEL" : "Nijedna datoteka nije odabrana.",
 	"FAILSAVE" : "Datoteka se nije mogla spremiti.",
 	"SETTINGSSAVED" : "Postavke Spremljene",
-	"RESYNCH" : "Delete Chain",
-	"RESYNCHWARN" : "Warning! This will completely delete your chain and restart the wallet. Use only when you were synced before, but now having troubles. Proceed?",
-	"RESYNCHCANCEL" : "Cancel",
-	"NEEDRESTART" : "Postavke Spremljene. Vaš novčanik će se zatvoriti automatski sada, molimo Vas ponovo pokrenite.",
-	"UNICODE" : "Please, use ANSI characters for the datadirpath only"
+	"RESYNCH" : "Obriši Lanac",
+	"RESYNCHWARN" : "Upozorenje! Ovim ćete obrisati kompletni lanac i restartovati novčanik. Koristite samo ako ste prethodno sinkronizirali, a sada imate problem. Nastavi?",
+	"RESYNCHCANCEL" : "Otkaži",
+	"NEEDRESTART" : "Postavke Spremljene. Vaš novčanik će se automatski zatvoriti, molimo Vas ponovo pokrenite.",
+	"UNICODE" : "Molimo Vas, koristite ANSI karaktere samo za datadirpath"
   },
    "SADDRESSES": {
     "SENDINGADDRESSES": "Adresa Slanja",
@@ -114,8 +114,8 @@
 	"USEDEFAULT" : "Koristi Zadano",
 	"RUNDAEMON" : "Pokreni Daemon na Pokretanju?",
 	"CONFIRM1" : "Potvrdi Transakciju",
-	"CONFIRM1_COMMENT" : "Tekst će vjerovatno biti izbrisan. ",
-	"CONFIRM2" : "Da li stvarno želite poslati ",
+	"CONFIRM1_COMMENT" : "Tekst će biti izbrisan. ",
+	"CONFIRM2" : "Potvrdite slanje ",
 	"CONFIRM" : "Da",
 	"CONFIRM3" : "U redu, Ponovno pokretanje"
   },
@@ -151,11 +151,11 @@
 	"SUBMIT": "Potvrdite Ime",
 	"NAMESPACE": "Izaberite imenski prostor unaprijed",
 	"NAMESPACECUSTOM": "Unesite prilagođeni imenski prostor, e.g. k/",
-	"TITLE1" : "ZATRAŽITE SVOJE JEDINSTVENO IME",
+	"TITLE1" : "ZATRAŽI SVOJE JEDINSTVENO IME",
 	"TITLE2" : "KOMEMORIRAJ SE NA BLOKČEINU",
 	"UPDATE": "Ažuriraj",
-	"TRANSFER": "Prijenos",
-	"UPDATET": "Ažuriraj/Prijenos",
+	"TRANSFER": "Transfer",
+	"UPDATET": "Ažuriraj/Transfer",
 	"RESERVE": "Rezervišite svoje ime naloga",
 	"RESERVE2": "Rezervišite naslov igrice",
 	"RESERVE3": "prilagođen",
@@ -168,19 +168,19 @@
 	"RESPONSE" : "Odgovor"
   },
    "CHAT": {
-    "NAME": "Name",
-	"SUBMIT": "Assign Name To XID",
-	"SUCCESS1": "XID Name '",
-	"SUCCESS2": "' has been added",
-    "TITLE": "XID Name List Owned",
-	"SIGNERS": "Signers",
-	"RUNNING": "XID is running",
-	"NOT_RUNNING": "XID is not running",
-	"NOT_UPTODATE": "XID is not up to date",
-	"GENERATE_PASSWORD": "GET PASS",
-	"APPLICATION": "Application address",
-	"DONEPASS": "Password generated",
-	"WRONGWALLET": "Please select game wallet",
-	"GETFULLNAME": "GET NAME"
+    "NAME": "Ime",
+	"SUBMIT": "Dodijelite ime na XID",
+	"SUCCESS1": "XID Ime '",
+	"SUCCESS2": "' je dodano",
+    "TITLE": "XID Lista imena u vlasništvu",
+	"SIGNERS": "Potpisnici",
+	"RUNNING": "XID je pokrenut",
+	"NOT_RUNNING": "XID nije pokrenut",
+	"NOT_UPTODATE": "XID nije ažuran",
+	"GENERATE_PASSWORD": "DOBIJ LOZINKU",
+	"APPLICATION": "Aplikacijska adresa",
+	"DONEPASS": "Lozinka generisana",
+	"WRONGWALLET": "Odaberite gaming novčanik",
+	"GETFULLNAME": "DOBIJ PUNO IME"
   }
 }
